V5.4.3
* Extend Column TEXTURE and SIGNATURE in mh_Players for MySQL users
* Fixed minor bugs.
V5.4.2
* MobHunting Skin Cache improved - support for MC 1.8R1, 1.8R2, 1.8R3, 1.9R1, 1.10R1, 1.11R1, 1.12R1
* Changed format() in rewardManager(). Trying to fix ticket 345 (https://github.com/Rocologo/MobHunting/issues/345)
V5.4.1
* MobHunting Skin Cache improved. Using player skins for online players and players who have logged on after this version is installed. 
V5.4.0
* Added 2 new strings to the lang files. "mobhunting.commands.happyhour.xxx"
* Fixed bug where new database V6 tables could not be created if not exist. Ticket 344 (https://github.com/Rocologo/MobHunting/issues/344)
V5.3.9
* Fixed bug where player could not remove MobHunting heads from their own head again.
* Fixed bug where merging two BagOfGold did not work properly on Minecraft 1.11
* Fixed bug (https://www.spigotmc.org/threads/mobhunting.46937/page-151#post-2832952) 
V5.3.8
* MyPet can now pickup BagOfGold and the money will directly into the owners balance if "drop-money-use-item-as-currency: false" in config.yml. If true the Pet just pickup the BagOfGold like when the player picks up the bag. If the BagOfGold plugin is used, the money will not go into the player balance until the money is stored in the player inventory. This means that the player save his BagOfGold/money in the MyPet Inventory in case he dies. (This feature is only possible because @xXKeyleXx made a new event MyPetPickupItem for me to use in MobHunting. Thanks Keyle!)     
* Fixed /mh version
* New Players is now created with starting balance, no matter if the player is known or not on the server. 
* Language files was updated.
V5.3.7
* Deny players to use BagOfGold in all other slottypes than QuickBar and Container.
* BagOfGold can now be handled in Creative mode too.
V5.3.6
* Added player skin cache to mh_Players
* Fixed support for CraftBukkit
V5.3.5
* Fixed /mh version
* Tested and fixed rewards for PVP kills.
V5.3.4